--- a/src/assets/css/eventform.css
+++ b/src/assets/css/eventform.css
@@ -21,6 +21,10 @@
     width:50%;
     height: 50px;
 }
+.error{
+    color:red;
+    margin: 10px;
+}
 .submit-btn{
     cursor: pointer;
     border-radius: 5em;
